# wenhu

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/app/: package.json  vite.config.ts
apps/app/src/: main.ts
apps/manager/: README.md  package.json
apps/webui/: README.md  package.json  vite.config.ts
crates/wenhu-cli/: Cargo.toml  build.rs
crates/wenhu-cli/src/: dev.rs  env.rs  main.rs
crates/wenhu-cli/src/info/: check_env.rs  install_env.rs
crates/wenhu-core/: Cargo.toml  README.md  package.json
crates/wenhu-core/examples/tauri-app/: package.json
crates/wenhu-core/examples/tauri-app/src/: App.svelte
crates/wenhu-core/examples/tauri-app/src-tauri/: Cargo.toml
crates/wenhu-core/examples/tauri-app/src-tauri/capabilities/: default.json
crates/wenhu-core/examples/tauri-app/src-tauri/src/: lib.rs
crates/wenhu-core/guest-js/: index.ts
crates/wenhu-core/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
