[package]
name = "wenhu"
version = "0.1.0"
description = "文狐の小工具库 | A collection of tools for Wenhu"
authors = ["suyufox"]
license = "Apache-2.0"
repository = "http://github.com/suyufox/wenhu"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wenhu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { workspace = true }
tauri = { workspace = true }
