[package]
name = "wenhu"
version = "0.1.0"
description = "文狐の小工具库 | A collection of tools for Wenhu"
authors = ["suyufox"]
license = "Apache-2.0"
repository = "http://github.com/suyufox/wenhu"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wenhu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
log = "0.4"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.4.0", features = [] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-log = "2.3.1"
tauri-plugin-notification = "2.2.2"
tauri-plugin-opener = "2.2.6"
tauri-plugin-os = "2.2.1"
tauri-plugin-persisted-scope = "2.2.1"
tauri-plugin-process = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-store = "2.2.0"
tauri-plugin-stronghold = "2.2.0"
tauri-plugin-network = "2.0.4"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-pinia = "3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-single-instance = { version = "2.2.3", features = ["deep-link"] }
tauri-plugin-window-state = "2.2.2"


