[package]
name = "wenhu-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
futures-util = "0.3.31"
indicatif = "0.17.11"
open = "5.3.2"
reqwest = { version = "0.12.15", features = ["stream"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
chrono = "0.4.40"
