[package]
name = "tauri-plugin-wenhu-core"
version = "0.1.0"
authors = [ "suyufox" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-wenhu-core"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
